[package]
name = "wgpu_crm_mgr"
version = "0.1.3"
edition = "2024"

authors = ["Maxim Wagner"]
license = "MIT"
description = "A lightweight cached wrapper for wgpu render and compute pipelines and procedural textures"
repository = "https://github.com/maxwag9/wgpu-crm-mgr"
homepage = "https://github.com/maxwag9/wgpu-crm-mgr"
documentation = "https://docs.rs/wgpu-crm-mgr"

keywords = ["wgpu", "graphics", "rendering", "compute", "gpu"]
categories = ["graphics", "rendering", "game-development"]

[dependencies]
wgpu = "28.0.0"
bytemuck = "^1.12.0"

