[package]
name = "wgpu_render_manager"
version = "0.2.8"
edition = "2024"

authors = ["Maxim Wagner"]
license = "MIT"
description = "Cached Render/Compute Manager for wgpu (pipelines + bind groups + procedural textures automated)"
repository = "https://github.com/maxwag9/wgpu_render_manager"
homepage = "https://github.com/maxwag9/wgpu_render_manager"
documentation = "https://docs.rs/wgpu_render_manager"

keywords = ["wgpu", "graphics", "rendering", "compute", "gpu"]
categories = ["graphics", "rendering", "game-development"]

[dependencies]
wgpu = "29.0.1"
bytemuck = "^1.12.0"
serde = { version = "^1.0.228", features = ["derive"] }
